2010-04-21  JMB  Updated Debian packaging, yet more bugfixes

    Tested and debugged the Debian packaging; now passes lintian cleanly.
    Fixed a column sizing bug introduced by the new model/view design for the
    main data grid.  Resolved a couple of minor memory issues revealed by
    Valgrind.  Updated the Metakit patch to resolve a warning generated by
    recent versions of gcc.  Simplified the Filter class to resolve a possible
    bug involving pointer sizes.  Fixed a syntax bug in some of the Mac
    localization files.

2010-04-20  JMB  Diablo packaging fixes, more bugfixes

    Tested and fixed the Maemo packaging, such that it can now cleanly generate
    a package for Diablo.  Patched the random number generator library to
    seed itself from /dev/urandom instead of /dev/random so it doesn't hang
    due to lack of entropy.  Disabled column reordering on the main data grid
    widget (that's best done with views).  Aspect ratios are now preserved
    again for images shown in a slideshow, and on Maemo images are shown
    centered in a consistently maximized dialog for viewing.

2010-04-19  JMB  Maemo packaging, updated Debian packaging, bugfixes

    First attempt at proper Maemo packaging (for both Diablo and Fremantle),
    and updated the Debian packaging in the process.  As part of this, the
    already-patched Metakit source code is now included in the PortaBase
    source code; this should make things easier for anybody building PortaBase
    from source.  Still testing the packaging work, but it should be almost
    finished.

    Fixed a bug in the new code for updating the display after editing a row
    or toggling a boolean value.  Dialogs should now fill the appropriate width
    in Maemo, even in fullscreen mode.  Adjusted the toolbar spacing on Maemo
    to fit in better and be more finger-friendly.  Also, opening a PortaBase
    file from the command line no longer requires a "-f" flag.
